relatively stable release 1.3a5.  It works towards the new stable
release 1.3.6.

This branch is also the basis for the "swig1.3" Debian package
(currently unofficial, available from
http://www.math.uni-magdeburg.de/~mkoeppe/imo-debian). 

Eventually this branch will be merged with the development on the
trunk of the CVS tree.

Version 1.3.6  (not yet released)
=============

6/18/2001: mkoeppe
	   * [Guile]: Don't call scm_c_export if nothing is to be
	     exported.  Don't warn on %module if module has been set
	     already (this frequently occurs when %import is used).

6/16/2001: mkoeppe
	   * [Guile]: New "passive" linkage, which is appropriate for
	     multi-module extensions without Guile module magic.

6/15/2001: mkoeppe
	   * [Guile]: Fixed printing of smobs (space and angle were
	     missing). 
	   * Properly generate type information for base classes
	     imported with the %import directive.  Thanks to Marcelo
	     Matus <mmatus@acms.arizona.edu> for the report and the
	     patch; this closes SF bug #231619; see also
	     Examples/guile/test-suite/import*. 
	   * [Guile]: Fix casting between class and base class; the
	     runtime type system had it the wrong way around; see
	     Examples/guile/test-suite/casts.i
	   * Make typemaps for SWIGPOINTER * with arg name take
	     precedence over those without arg name, to match normal
	     typemap precedence rules.
	   * Fixed the random-line-numbers problem reported as SF bug
	     #217310; thanks to Michael Scharf <scharf@users.sf.net>.
	   * [Guile]: Handle the %name and %rename directives.
	   * New syntax: %name and %rename now optionally take double
	     quotes around the scripting name.  This is to allow scripting
	     names that aren't valid C identifiers.

6/14/2001: beazley
           Made a minor change to the way files are loaded in
           order to get file/line number reporting correct in
           the preprocessor.

6/14/2001: mkoeppe